--- a/KingsWalletAPI.Service/KingsWalletAPI.Service.csproj
+++ b/KingsWalletAPI.Service/KingsWalletAPI.Service.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\KingsWalletAPI.Data\KingsWalletAPI.Data.csproj" />
+    <ProjectReference Include="..\KingsWalletAPI.Model\KingsWalletAPI.Model.csproj" />
+  </ItemGroup>
+
 </Project>
